--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body, html{
     border: none;
     font-weight: bold;
     color: #0F298B;
+    background-color: white;
     font-size: 18px;
 }
 
