--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body, html{
     padding: 0;
     width: 100%;
     height: 100%;
-    font-family: 'Space_Grotesk';
+    font-family: 'Space Grotesk';
     background-color: #FAFAFA;
     color: #000000;
     scroll-behavior: smooth;
